# xjax

./: .gitignore  Makefile  README.md  conftest.py  environment.sh  pyproject.toml  pytest.ini  requirements.txt
docs/: embeddings.ai  transformer-layer.ai  transformer-pipeline.ai  transformers.ai  transformers.mdj
notebooks/: 01-diagonal.ipynb  01-mlp-diagonal.ipynb  02-mlp-circle.ipynb  03-mlp-sphere.ipynb  04-xgb-jax-torch.ipynb  05-jax-sgns-simpsons.ipynb  05-xformers-torch.ipynb
src/xjax/: __init__.py  _utilities.py  datasets.py
src/xjax/datasets/: __init__.py  _datasets.py
src/xjax/datasets/nlp/: __init__.py  _nlp.py
src/xjax/models/: __init__.py  _flax.py  _sklearn.py  _torch.py
src/xjax/models/flax/: _flax.py
src/xjax/models/jax/: _sgns.py
src/xjax/plots/: __init__.py  _plots.py
src/xjax/signals/: __init__.py  _signals.py
src/xjax/tools/: __init__.py  _utilities.py
tests/fixtures/: common_fixtures.py  jax_fixtures.py  torch_fixtures.py
tests/unit/: test_datasets.py  test_hf_models.py  test_jax.py  test_models.py
